added dashboard and pagination in addition to sorting for addmin user